fixed bg color bug on small screen

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -149,6 +149,8 @@ mat-form-field {
     }
   }
   .form-side{
+    background-image: none!important;
+    background-color: #fff;
     order: 2;
     padding-top: 5vh;
     padding-bottom: 5vh;
